// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcSmartTableEmpty should not render the title if title prop was not given 1`] = `
<div
  class="ec-smart-table-empty"
  data-test="ec-smart-table-empty"
>
  <div>
    <!---->
     
    <!---->
  </div>
   Random empty message
</div>
`;

exports[`EcSmartTableEmpty should render default empty message 1`] = `
<div
  class="ec-smart-table-empty"
  data-test="ec-smart-table-empty"
>
  <div>
    <div
      class="ec-smart-table-heading-title"
    >
      Random Title
    </div>
     
    <!---->
  </div>
   No items found
</div>
`;

exports[`EcSmartTableEmpty should render given empty slot 1`] = `
<div
  class="ec-smart-table-empty"
  data-test="ec-smart-table-empty"
>
  <div>
    <div
      class="ec-smart-table-heading-title"
    >
      Random Title
    </div>
     
    <!---->
  </div>
   
  <strong>
    Empty Slot: Test empty message
  </strong>
</div>
`;

exports[`EcSmartTableEmpty should render given filter and header-actions slots 1`] = `
<div
  class="ec-smart-table-empty"
  data-test="ec-smart-table-empty"
>
  <div>
    <div
      class="ec-smart-table-heading-title"
    >
      Random Title
    </div>
     
    <div
      class="ec-smart-table-heading"
    >
      <div
        class="ec-smart-table-heading__filter"
      >
        <div>
          Custom filter
        </div>
      </div>
       
      <div
        class="ec-smart-table-heading__actions"
      >
        <div>
          Header Actions
        </div>
      </div>
    </div>
  </div>
   Random empty message
</div>
`;

exports[`EcSmartTableEmpty should render given filter slot 1`] = `
<div
  class="ec-smart-table-empty"
  data-test="ec-smart-table-empty"
>
  <div>
    <div
      class="ec-smart-table-heading-title"
    >
      Random Title
    </div>
     
    <div
      class="ec-smart-table-heading"
    >
      <div
        class="ec-smart-table-heading__filter"
      >
        <div>
          Custom filter
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   Random empty message
</div>
`;

exports[`EcSmartTableEmpty should render given header-actions slot 1`] = `
<div
  class="ec-smart-table-empty"
  data-test="ec-smart-table-empty"
>
  <div>
    <div
      class="ec-smart-table-heading-title"
    >
      Random Title
    </div>
     
    <div
      class="ec-smart-table-heading"
    >
      <!---->
       
      <div
        class="ec-smart-table-heading__actions"
      >
        <div>
          Header Actions
        </div>
      </div>
    </div>
  </div>
   Random empty message
</div>
`;

exports[`EcSmartTableEmpty should render given header-actions slot with the props 1`] = `
<div
  class="ec-smart-table-empty"
  data-test="ec-smart-table-empty"
>
  <div>
    <div
      class="ec-smart-table-heading-title"
    >
      Random Title
    </div>
     
    <div
      class="ec-smart-table-heading"
    >
      <!---->
       
      <div
        class="ec-smart-table-heading__actions"
      >
        <div>
          Header Actions total: 0, items: [], error: , loading: false
        </div>
      </div>
    </div>
  </div>
   Random empty message
</div>
`;

exports[`EcSmartTableEmpty should render properly 1`] = `
<div
  class="ec-smart-table-empty"
  data-test="ec-smart-table-empty"
>
  <div>
    <div
      class="ec-smart-table-heading-title"
    >
      Random Title
    </div>
     
    <!---->
  </div>
   Random empty message
</div>
`;
